forth/test/fail/test_const_fold_redundant_loc_udiv_one.af
use' ../../lang.af
fun: test_const_fold_redundant_loc_udiv_one { val -- out } 1 u/: val val end
